Fix attack filters in combat tab scrolling out of view

--- a/less/actors.less
+++ b/less/actors.less
@@ -822,8 +822,6 @@
 
     .combat-attacks {
       flex: 1 1 320px;
-      border-bottom: 2px solid @colorDark;
-      margin-bottom: 4px;
       overflow-y: scroll;
     }
 
