--- a/pf1.css
+++ b/pf1.css
@@ -1724,8 +1724,6 @@
 .pf1.sheet.actor .tab.combat .combat-attacks,
 .pf1.sheet.actor .tab.buffs .combat-attacks {
   flex: 1 1 320px;
-  border-bottom: 2px solid #191813;
-  margin-bottom: 4px;
   overflow-y: scroll;
 }
 .pf1.sheet.actor .tab.features .inventory-group,
